Compile tokyo from sources

--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,14 @@
 {erl_opts, [debug_info]}.
 
-{port_env, [{"DRV_LDFLAGS", "$DRV_LDFLAGS -ltokyocabinet"},
-            {"DRV_CFLAGS", "$DRV_CFLAGS -pedantic -std=c99 -O2"}]}.
+{port_env, [
+    {"DRV_CFLAGS", "$DRV_CFLAGS -I./priv/tokyo-root/include -pedantic -std=c99 -O2"},
+    {"DRV_LDFLAGS", "$DRV_LDFLAGS ./priv/tokyo-root/lib/libtokyocabinet.a"}
+]}.
 
-{port_specs, [{"priv/libtoke.so", ["c_src/toke.c"]}]}.
+{port_specs, [
+    {"priv/libtoke.so", ["c_src/toke.c"]}
+]}.
+
+{pre_hooks, [
+	{compile, "./priv/make_tokyo.sh"}
+]}.
