Use shared lib, but hardcode its location

--- a/rebar.config
+++ b/rebar.config
@@ -2,7 +2,7 @@
 
 {port_env, [
     {"DRV_CFLAGS", "$DRV_CFLAGS -I./priv/tokyo-root/include -pedantic -std=c99 -O2"},
-    {"DRV_LDFLAGS", "$DRV_LDFLAGS ./priv/tokyo-root/lib/libtokyocabinet.a"}
+    {"DRV_LDFLAGS", "$DRV_LDFLAGS -L./priv/tokyo-root/lib -Wl,-rpath ./priv/tokyo-root/lib -ltokyocabinet"}
 ]}.
 
 {port_specs, [
