Store tokyo locally. Refine make/clean

--- a/rebar.config
+++ b/rebar.config
@@ -1,8 +1,8 @@
 {erl_opts, [debug_info]}.
 
 {port_env, [
-    {"DRV_CFLAGS", "$DRV_CFLAGS -I./priv/tokyo-root/include -pedantic -std=c99 -O2"},
-    {"DRV_LDFLAGS", "$DRV_LDFLAGS -L./priv/tokyo-root/lib -Wl,-rpath,'$ORIGIN/tokyo-root/lib' -ltokyocabinet"}
+    {"DRV_CFLAGS", "$DRV_CFLAGS -Ideps/tokyocabinet -pedantic -std=c99 -O2"},
+    {"DRV_LDFLAGS", "$DRV_LDFLAGS -Ldeps/tokyocabinet -Wl,-rpath,'$ORIGIN' -ltokyocabinet"}
 ]}.
 
 {port_specs, [
@@ -10,5 +10,6 @@
 ]}.
 
 {pre_hooks, [
-	{compile, "./priv/make_tokyo.sh"}
+	{compile, "scripts/make_tokyo.sh"},
+    {clean, "scripts/clean_tokyo.sh"}
 ]}.
