--- a/rebar.config
+++ b/rebar.config
@@ -2,7 +2,8 @@
 
 {port_env, [
     {"DRV_CFLAGS", "$DRV_CFLAGS -Ideps/tokyocabinet -pedantic -std=c99 -O2"},
-    {"DRV_LDFLAGS", "$DRV_LDFLAGS -Ldeps/tokyocabinet -Wl,-rpath,'$ORIGIN' -ltokyocabinet"}
+    {"DRV_LDFLAGS",
+        "$DRV_LDFLAGS -Ldeps/tokyocabinet -Wl,-rpath,'$ORIGIN' -ltokyocabinet"}
 ]}.
 
 {port_specs, [
@@ -10,6 +11,6 @@
 ]}.
 
 {pre_hooks, [
-	{compile, "scripts/make_tokyo.sh"},
+    {compile, "scripts/make_tokyo.sh"},
     {clean, "scripts/clean_tokyo.sh"}
 ]}.
